WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
36029
Fix style errors in
r55853
https://bugs.webkit.org/show_bug.cgi?id=36029
Summary
Fix style errors in r55853
Nate Chapin
Reported
2010-03-11 13:53:55 PST
In my rush to get a compile fix out, I introduced style violations in
r55853
. Fix them, and provide a bit more detail in the comment.
Attachments
patch
(1.43 KB, patch)
2010-03-11 14:06 PST
,
Nate Chapin
dglazkov
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Nate Chapin
Comment 1
2010-03-11 14:06:45 PST
Created
attachment 50537
[details]
patch
Dimitri Glazkov (Google)
Comment 2
2010-03-11 14:20:56 PST
Comment on
attachment 50537
[details]
patch ok.
Nate Chapin
Comment 3
2010-03-11 16:11:58 PST
http://trac.webkit.org/changeset/55856
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug