2010-03-11  Nate Chapin  <japhet@chromium.org>

Reviewed by Dimitri Glazkov.

        Fix style issues and improve comments from
        http://trac.webkit.org/changeset/55853.

        https://bugs.webkit.org/show_bug.cgi?id=36029

        * platform/animation/TimingFunction.h:
        (WebCore::TimingFunction::TimingFunction):


Canonical link: https://commits.webkit.org/47151@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55856 268f45cc-cd09-0410-ab3c-d52691b4dbfc